# backgammon

./: .gitignore
contract/: Move.toml
contract/sources/: backgammon.move
game/: Cargo.toml
game/src/: components.rs  drawing.rs  game.rs  gdk.rs  main.rs  resources.rs  states.rs  ui.rs  utils.rs
