[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
bevy = "=0.12.1"
ed25519-dalek-bip32 = "0.3.0"
once_cell = "1.19.0"
    rand = "0.7.3"
rand_core = "0.6.4"
tokio = "1.40.0"
url = "2.5.2"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
