[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
bevy = { version = "0.14.2", default-features = false, features = ["bevy_core", "bevy_ecs","dynamic_linking"] }
bevy_async_task = "0.2.0"
bevy_simple_text_input = "0.9.2"
ed25519-dalek-bip32 = "0.3.0"
once_cell = "1.20.2"
rand = "0.8.5"
rand_core = "0.6.4"
tokio = "1.40.0"
url = "2.5.2"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

